welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Array[Int]
  var t:Array[Int]=Nil
                   ^